    (Closes: #724797)
  * systemctl: mangle names when avoiding dbus (Closes: #723855)
  * Make 99-systemd.rules check for /run/systemd/systemd instead of the
    ill-named cgroups directory.
  * allow group adm read access on /var/log/journal (Closes: #717386)
  * add systemd-journal group (Thanks Guido Günther) (Closes: #724668)

 -- Tollef Fog Heen <tfheen@debian.org>  Mon, 28 Oct 2013 14:31:16 +0100

systemd (204-5) unstable; urgency=high

  * Cherry-pick 72fd713 from upstream which fixes insecure calling of polkit
    by avoiding a race condition in scraping /proc (CVE-2013-4327).
    Closes: #723713

 -- Michael Biebl <biebl@debian.org>  Mon, 23 Sep 2013 11:59:53 +0200

systemd (204-4) unstable; urgency=low

  * Add preinst check to abort udev upgrade if the currently running kernel
    lacks devtmpfs support. Since udev 176, devtmpfs is mandatory as udev no
    longer creates any device nodes itself. This only affects self-compiled
    kernels which now need CONFIG_DEVTMPFS=y.  Closes: #722580
  * Fix SysV init script to correctly mount a devtmpfs instead of tmpfs. This
    only affects users without an initramfs, which usually is responsible for
    mounting the devtmpfs.  Closes: #722604
  * Drop pre-squeeze upgrade code from maintainer scripts and simplify the
    various upgrade checks.
  * Suppress errors about unknown hwdb builtin. udev 196 introduced a new
    "hwdb" builtin which is not understood by the old udev daemon.
  * Add missing udeb line to shlibs.local. This ensures that udev-udeb gets a
    proper dependency on libudev1-udeb and not libudev1.  Closes: #722939
  * Remove udev-udeb dependency from libudev1-udeb to avoid a circular
    dependency between the two packages. This dependency was copied over from
    the old udev-gtk-udeb package and no longer makes any sense since
    libudev1-udeb only contains a library nowadays.

 -- Michael Biebl <biebl@debian.org>  Wed, 18 Sep 2013 00:05:21 +0200

systemd (204-3) unstable; urgency=low
