@@ -11,6 +11,7 @@ systemd (204-6) UNRELEASED; urgency=low
     ill-named cgroups directory.
   * allow group adm read access on /var/log/journal (Closes: #717386)
   * add systemd-journal group (Thanks Guido Günther) (Closes: #724668)
+  * copy /etc/localtime instead of symlinking (Closes: #726256)
 
  -- Tollef Fog Heen <tfheen@debian.org>  Mon, 28 Oct 2013 14:31:16 +0100
 
